# ml-templates

./: .gitignore  README.md  pyproject.toml
examples/: scratch.ipynb
examples/mnist_classifier/: hyperparams.yml  mnist_classifier.ipynb
examples/pytree_factory/: pytree_factory_example.ipynb
examples/train_state_equinox/: callback.py  hyperparams.yml  loss.py  model.py  optimizer.py  train.py  update.py
src/ml_templates/: __init__.py
src/ml_templates/pytree_factory/: __init__.py  _example_pytrees.py  factory.py
src/ml_templates/state_evolution/basic/: callback.py  evolve.py  state.py  update.py
src/ml_templates/state_evolution/train_with_checkpoints/: README.md  __init__.py  callback.py  checkpoint.py  dataloader.py  loss.py  model.py  optimizer.py  pyproject.toml  state_factory.py  train.py  update.py  utils.py
templates/: README.md
templates/state_evolution/: README.md
templates/state_evolution/basic/: README.md  hyperparams.yml  utils.py
templates/state_evolution/train_with_checkpoints/: README.md  callback.py  checkpointing.py  dataloader.py  hyperparams.yml  loss.py  loss_history.txt  model.py  optimizer.py  state.py  train.py  trained_model.eqx  update.py  utils.py
